# tc-project-01

./: .env.example  .gitignore  115.md  AGENTS.md  ARCHITECTURE.md  FAILED-DEV-INSIGHTS.md  OG_SCHOOL_PROJECT_REQUIREMENTS.md  PLAN.md  PROGRESS_TRACKING.md  README.md  REPO_GUIDE.md  REQUIREMENTS.md  RULES.md  STREAMLIT_DEPLOY_STEPS.md  environment.yml  failed-dev-insights.md  progress_tracking.md  pyproject.toml  requirements.md  requirements.txt  rules.md  setup.py
app/: __init__.py
app/core/: __init__.py  chat_exports.py  chat_history.py  controller.py  dataclasses.py  langchain_client.py  logging_config.py  model_catalog.py  orchestration.py  prompt_builder.py  prompts.py  response_formatter.py  safety.py  structured_output.py
app/core/llm/: __init__.py  (+1 more)
app/ui/: App.py  Interview_Preparation_Chat.py  Interview_Preparation_Chat_(OpenAI_API).py  LangChain_Only.py  chat_ui.py  chat_ui_common.py  classic_ui.py  langchain_chat_ui.py  langchain_questions_ui.py  openai_chat_app.py  openai_chat_ui.py  openai_questions_ui.py  streamlit_app.py  streamlit_chat_app.py
interview_preparation_app.egg-info/: PKG-INFO  SOURCES.txt
profiles/: interview.yaml  legal_employment.yaml
tests/: conftest.py  test_chat_exports.py  test_chat_history.py  test_chat_ui.py  test_controller.py  test_integration.py  test_langchain_client.py  test_logging.py  test_model_catalog.py  test_openai_client.py  test_prompt_builder.py  test_prompts.py  test_response_formatter.py  test_safety.py  test_streamlit_app.py  test_streamlit_chat_app.py  test_streamlit_pages.py  test_structured_output.py
(+6 files in other folders)
