[project]
name = "interview-preparation-app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-openai>=1.1.8",
    "markdown-pdf>=1.11",
    "openai>=2.18.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
